--- a/src/app/components/side-menue/side-menue.component.html
+++ b/src/app/components/side-menue/side-menue.component.html
@@ -1,6 +1,6 @@
-<div class="w-[265px] bg-[#5ca2a6] h-full p-6 m-1">
+<div class="w-52 lg:w-64 bg-[#5ca2a6] h-full p-6 m-1">
 
-    <select class="rounded w-48 h-7">
+    <select class="rounded w-40 lg:w-48 h-7">
         <option value="" disabled selected hidden>Dashboard</option>
         <i class="pi pi-dashboard absolute left-2 top-1/2 -translate-y-1/2 text-gray-500"></i>
     </select>
