--- a/src/app/components/order-request-status-card/order-request-status-card.component.html
+++ b/src/app/components/order-request-status-card/order-request-status-card.component.html
@@ -1,6 +1,6 @@
-<div class=" flex flex-col md:w-96 w-64 h-28 ">
+<div class=" flex flex-col lg:w-96 w-64 h-28 ">
     <div class="w-full h-1/2 flex items-center justify-center">
-        <h3 class="text-4xl font-bold">14</h3>
+        <h3 class="text-4xl font-bold">{{values}}</h3>
     </div>
     <div class="w-full h-1/2 flex justify-center">
         <p>{{text}}</p>
