--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,25 +1,39 @@
 <app-top-nav-bar></app-top-nav-bar>
 
 <div class="flex flex-col h-screen">
-    <div class="h-12 w-full bg-[#5ca2a6] flex items-center p-5 justify-between">
+    <div class="h-12 w-full bg-[#5ca2a6] flex items-center p-5 justify-between" [formGroup]="AdminDashboardInputData">
         <div class="rounded w-auto flex flex-row justify-between items-center gap-5">
-            <select name="" id="" class="w-20 lg:w-32 h-8 rounded flex items-center justify-center">
+            <select name="" id="" class="w-20 lg:w-32 h-8 rounded flex items-center justify-center" formControlName="BrandID" (change)="onSelctionChangeBrand()">
                 <option value="" disabled selected hidden>Brand</option>
+                
+                    @for (brand of BrandData; track $index) {
+                        <option [value]="brand.bigid">{{brand.vcbrand}}</option>
+                    }
             </select>
-            <select name="" id="" class="w-20 lg:w-32 h-8 rounded flex items-center justify-center">
+            <select name="" id="" class="w-20 lg:w-32 h-8 rounded flex items-center justify-center" formControlName="DealerID" (change)="onSelectionChangeDealer()">
                 <option value="" disabled selected hidden>Dealer</option>
+                @for (Dealer of DealerData; track $index) {
+                    <option [value]="Dealer.bigid">{{Dealer.vcName}}</option>
+                }
             </select>
-            <select name="" id="" class="w-24 lg:w-32 h-8 rounded">
+            <select name="" id="" class="w-24 lg:w-32 h-8 rounded" formControlName="LocationID" (change)="onSelectionChangeApprovedBy()" >
                 <option value="" disabled selected hidden>Select Location</option>
+                @for (location of LocationData; track $index) {
+                    <option [value]="location.LocationID">{{location.Location}}</option>
+                }
             </select>
-            <select name="" id="" class="w-24 lg:w-32 h-8 rounded flex items-center justify-center">
+            <select name="" id="" class="w-24 lg:w-32 h-8 rounded flex items-center justify-center" formControlName="TypeOfOrder">
                 <option value="" disabled selected hidden>Type Of Order</option>
             </select>
-            <select name="" id="" class="w-20 lg:w-32 h-8 rounded flex items-center justify-center">
+            <select name="" id="" class="w-20 lg:w-32 h-8 rounded flex items-center justify-center" formControlName="ApproveBy" >
                 <option value="" disabled selected hidden>Approved By</option>
             </select>
-            <select name="" id="" class="w-24 lg:w-32 h-8 rounded flex items-center justify-center">
+            <select name="" id="" class="w-24 lg:w-32 h-8 rounded flex items-center justify-center"formControlName="Timeband">
                 <option value="" disabled selected hidden>Time Band</option>
+                <option value="today">Today</option>
+                <option value="yesterday">Yesterday</option>
+                <option value="lastweek">Last Week</option>
+                <option value="last30Days">Last 30 Days</option>
             </select>
         </div>
         <div class="flex w-auto items-center justify-between gap-4 ">
