--- a/src/app/components/side-menue/side-menue.component.html
+++ b/src/app/components/side-menue/side-menue.component.html
@@ -1,4 +1,4 @@
-<div class="w-52 lg:w-64 bg-[#5ca2a6] h-full p-6 m-1">
+<div class="w-52 lg:w-64 bg-[#5ca2a6] h-full p-6 m-1 shadow-lg overflow-hidden">
 
     <select class="rounded w-40 lg:w-48 h-7">
         <option value="" disabled selected hidden>Dashboard</option>
