--- a/src/app/components/spm-dashboard/spm-dashboard.component.html
+++ b/src/app/components/spm-dashboard/spm-dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="relative">
-  <!-- Loader -->
+   Loader 
   <div *ngIf="isLoading" class="absolute inset-0 bg-white bg-opacity-70 z-50 flex items-center justify-center">
     <p-progressSpinner ariaLabel="loading" />
   </div>
@@ -18,9 +18,10 @@
                 <option value="" disabled selected hidden>Time Band</option>
                 <option value="today">Today</option>
                 <option value="yesterday">Yesterday</option>
-                <option value="lastweek">Last Week</option>
+                <option value="last week">Last Week</option>
                 <option value="last30Days">Last 30 Days</option>
             </select>
+            
         </div>
         <div class="flex items-center justify-between gap-4 ">
             <div class="flex ">
@@ -47,10 +48,10 @@
         <div class="h-full w-full flex items-center justify-center gap-4 z-10">
           <div class="grid lg:grid-cols-2 gap-8 grid-cols-1">
             <!-- Cards -->
-            <app-order-request-status-card [values]="sumOfNotInMaster" class="bg-[#ffe786] rounded-lg" text="'Parts not in master' Pending"></app-order-request-status-card>
-            <app-order-request-status-card [values]="sumOfPendingRequest" class="bg-[#efeff8] rounded-lg" text="No. of Request Pending"></app-order-request-status-card>
-            <app-order-request-status-card [values]="sumofApprovedRequest" class="bg-[#63f4ad] rounded-lg" text="No. of Requests Approved"></app-order-request-status-card>
-            <app-order-request-status-card [values]="sumofRejectedRequest" class="bg-[#ff9d9d] rounded-lg" text="No. of Request Rejected"></app-order-request-status-card>
+            <app-order-request-status-card [values]="sumOfNotInMaster" class="bg-[#ffe786] " text="'Parts not in master' Pending"></app-order-request-status-card>
+            <app-order-request-status-card [values]="sumOfPendingRequest" class="bg-[#efeff8]" text="No. of Request Pending"></app-order-request-status-card>
+            <app-order-request-status-card [values]="sumofApprovedRequest" class="bg-[#63f4ad]" text="No. of Requests Approved"></app-order-request-status-card>
+            <app-order-request-status-card [values]="sumofRejectedRequest" class="bg-[#ff9d9d]" text="No. of Request Rejected"></app-order-request-status-card>
           </div>
         </div>
       </div>
